@@ -1,3 +1,5 @@
+* Improve rec_name of carrier
+
 Version 2.2.0 - 2011-10-24
 * Bug fixes (see mercurial logs for details)
 
